cmake_minimum_required(VERSION 3.10)
project(BitStringTest4)
enable_testing()
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
find_package(exceptions CONFIG REQUIRED)
add_subdirectory(asn1)
add_executable(bitstringtest4 test-bitstringtest4.cpp)
target_link_libraries(bitstringtest4 bitstringtest4-asn1 Vlinder::exceptions)
add_test(test_bitstringtest4 bitstringtest4)
